# ckanext-core-fix

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/core_fix/: config.py  exceptions.py  helpers.py  plugin.py  utils.py
ckanext/core_fix/assets/: script.js  webassets.yml
ckanext/core_fix/assets/css/: button_icon_text_gap.css  fontawesome_icons.css  mobile_layout_breakpoint.css  restyle_activity.css  secondary_order.css
ckanext/core_fix/template_fix/group_list_csrf/group/snippets/: group_list.html
ckanext/core_fix/template_fix/mobile_layout_breakpoint/: page.html
ckanext/core_fix/template_fix/restyle_activity/snippets/: stream.html
ckanext/core_fix/templates/: page.html
ckanext/core_fix/templates/markdown_macro/macros/form/: markdown.html
ckanext/core_fix/tests/: test_plugin.py
